--- a/ActivitiDotNet/ActivitiDotNet.csproj
+++ b/ActivitiDotNet/ActivitiDotNet.csproj
@@ -59,12 +59,18 @@
     <Compile Include="Configuration\ConfigurationManager.cs" />
     <Compile Include="Configuration\ConfigurationStrings.cs" />
     <Compile Include="Constants\UrlConstants.cs" />
-    <Compile Include="CustomModel\GroupInfo.cs" />
+    <Compile Include="CustomModel\ByteInfo.cs" />
+    <Compile Include="Engine\EngineInfo.cs" />
+    <Compile Include="Engine\EngineInfoProvider.cs" />
+    <Compile Include="Exceptions\ActivitiWebException.cs" />
+    <Compile Include="Exceptions\httpResponseCode.cs" />
+    <Compile Include="Helpers\UrlBuilder.cs" />
+    <Compile Include="Identity\Group\GroupInfo.cs" />
     <Compile Include="CustomModel\VariableInfo.cs" />
     <Compile Include="Deployment\DeploymentInfo.cs" />
     <Compile Include="Deployment\DeploymentInfoProvider.cs" />
-    <Compile Include="Deployment\DeploymentResourceInfo.cs" />
-    <Compile Include="Deployment\DeploymentResourceInfoProvider.cs" />
+    <Compile Include="Common\ResourceInfo\ResourceInfo.cs" />
+    <Compile Include="Common\ResourceInfo\ResourceInfoProvider.cs" />
     <Compile Include="Enums\ActivateOrSuspend.cs" />
     <Compile Include="Enums\ExecutionAction.cs" />
     <Compile Include="Enums\IdentityLinkFamily.cs" />
@@ -81,12 +87,16 @@
     <Compile Include="Helpers\MultipartHelper.cs" />
     <Compile Include="Helpers\ResponseHelper.cs" />
     <Compile Include="Helpers\StringExtensions.cs" />
-    <Compile Include="CustomModel\UserInfo.cs" />
+    <Compile Include="Identity\IdentityInfo.cs" />
+    <Compile Include="Identity\IdentityInfoProvider.cs" />
+    <Compile Include="Identity\User\UserInfo.cs" />
+    <Compile Include="Job\JobInfo.cs" />
+    <Compile Include="Job\JobInfoProvider.cs" />
     <Compile Include="Model\ModelInfo.cs" />
     <Compile Include="Model\ModelInfoProvider.cs" />
     <Compile Include="Network\ActivitiRESTClient.cs" />
     <Compile Include="Network\Builder\RequestBuilder.cs" />
-    <Compile Include="Network\HttpMethod.cs" />
+    <Compile Include="Network\Enums\HttpMethod.cs" />
     <Compile Include="Network\Model\Response.cs" />
     <Compile Include="Network\RequestExecutor.cs" />
     <Compile Include="Process\Instance\ProcessInstanceInfo.cs" />
@@ -94,17 +104,20 @@
     <Compile Include="Process\Definition\ProcessInfoProvider.cs" />
     <Compile Include="Process\Instance\ProcessInstanceInfoProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Shared\SharedStrings.cs" />
+    <Compile Include="Runtime.cs" />
     <Compile Include="Task\TaskInfo.cs" />
     <Compile Include="Task\TaskInfoProvider.cs" />
-    <Compile Include="User\GroupInfoProvider.cs" />
-    <Compile Include="User\UserInfoProvider.cs" />
+    <Compile Include="Identity\Group\GroupInfoProvider.cs" />
+    <Compile Include="Identity\User\UserInfoProvider.cs" />
+    <Compile Include="Identity\User\UserInformations.cs" />
     <Compile Include="Variable\VariableInfoProvider.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Runtime\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
